--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body{
 
     background-image: url("bg.webp");
     background-size: fill;
+    min-height: 100%;
 
 }
 .banner{
@@ -24,6 +25,7 @@ body{
 .grid-container{
    display:flex;
    flex:1;
+   gap:10px;
    justify-content: center;
    align-items: start;
    background-color: rgba(255, 228, 196, 0.614);
@@ -33,6 +35,7 @@ body{
 
 .recipes{
     display: flex;
+    
     flex:1 1 200px;
     border: 10px solid rgb(226, 161, 82);
     border-radius: 10%;
@@ -93,9 +96,7 @@ a:link, a:visited {
   }
 
   .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    padding: 0;
     width: 100%;
     background-color: rgba(255, 228, 196, 0.614);
     color: black;
@@ -110,8 +111,16 @@ a:link, a:visited {
         height: 800px;
         width: 500px;
     }
-    .footer{
-        position: relative;
+
+  }
+
+  @media (max-width: 700px) {
+    .grid-container {
+      flex-direction: column;
     }
-    
+    .recipes{
+        height: 400px;
+        width: 250px;
+    }
+
   }
