--- a/main.css
+++ b/main.css
@@ -101,6 +101,8 @@ a:link, a:visited {
     background-color: rgba(255, 228, 196, 0.614);
     color: black;
     text-align: center;
+    position: absolute;
+    bottom: 0;
   }
 
 @media (max-width: 1000px) {
