--- a/main.css
+++ b/main.css
@@ -97,12 +97,13 @@ a:link, a:visited {
 
   .footer {
     padding: 0;
-    width: 100%;
     background-color: rgba(255, 228, 196, 0.614);
     color: black;
     text-align: center;
-    position: absolute;
+    position: fixed;
+    left: 0;
     bottom: 0;
+    width: 100%;
   }
 
 @media (max-width: 1000px) {
